# rustr

./: .gitignore  Cargo.toml  LICENSE  PROGRESS.md  README.md  TESTING.md  TODO.md
.cargo/: config.toml
.github/workflows/: build-wasm.yml  test.yml
core/: Cargo.toml  README.md
core/src/: error.rs  lib.rs  outbox.rs  relay.rs  subscription.rs  types.rs
core/src/signer/: internal.rs  mod.rs  nip07.rs
core/src/storage/: indexeddb.rs  mock.rs  mod.rs
core/tests/: integration_test.rs
docs/: DEBUG_TEST_MODE.md  DEBUG_TEST_QUICK_REFERENCE.md
scripts/: build-wasm-debug.sh  build-wasm.sh  dev-server.sh  test.sh
ui/: Cargo.toml  README.md  app.js  index.html
ui/assets/fonts/: README.md
ui/src/: app.rs  composer.rs  debug_test.rs  emoji_label.rs  font_config.rs  i18n.rs  lib.rs  onboarding.rs  settings.rs  timeline.rs
ui/tests/: e2e_helper.rs
